wrote filebin book loader